Cambio en env y authcontroller

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=D@nue1990
-DB_NAME=tasks
+DB_HOST=sql3.freesqldatabase.com
+DB_USER=sql3807622
+DB_PASSWORD=GZ2iC37G6p
+DB_NAME=sql3807622
 DB_PORT=3306
 JWT_SECRET=supersecreto
