Se modifico archivo env para conexion a base de datos remota

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 DB_HOST=sql3.freesqldatabase.com
-DB_USER=sql3807622
-DB_PASSWORD=GZ2iC37G6p
-DB_NAME=sql3807622
+DB_USER=sql3807834
+DB_PASSWORD=MhyyARhJVn
+DB_NAME=sql3807834
 DB_PORT=3306
 JWT_SECRET=supersecreto
