Se meodificomo por cambio de db en nube

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
-DB_HOST=sql3.freesqldatabase.com
-DB_USER=sql3807834
-DB_PASSWORD=MhyyARhJVn
-DB_NAME=sql3807834
-DB_PORT=3306
+DB_HOST=yamanote.proxy.rlwy.net
+DB_USER=root
+DB_PASSWORD=CpPJLCkMRfQMFhMDptaEGURxffxSoAiz
+DB_NAME=railway
+DB_PORT=49424
 JWT_SECRET=supersecreto
