Cambio en variables de entorno para producción Railway

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
-DB_HOST=yamanote.proxy.rlwy.net
+DB_HOST=maglev.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=CpPJLCkMRfQMFhMDptaEGURxffxSoAiz
+DB_PASSWORD=LTWlBchYnEEzTaeYtvbgbpMAaQsBvldw
 DB_NAME=railway
-DB_PORT=49424
+DB_PORT=14178
 JWT_SECRET=supersecreto
